--- a/java/src/at/reisisoft/bibigui/ui/GBS.form
+++ b/java/src/at/reisisoft/bibigui/ui/GBS.form
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="at.reisisoft.bibigui.ui.GBS">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="GBSpanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
@@ -11,29 +10,33 @@
       <component id="9af0b" class="javax.swing.JButton" binding="bGOOD">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <background color="-16711936"/>
-          <text value="Button"/>
+          <text value="Good"/>
         </properties>
       </component>
       <component id="82eca" class="javax.swing.JButton" binding="bBAD">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <background color="-52429"/>
-          <text value="Button"/>
+          <foreground color="-1"/>
+          <text value="Bad"/>
         </properties>
       </component>
       <component id="d054" class="javax.swing.JButton" binding="bSKIP">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
           <background color="-256"/>
           <enabled value="true"/>
-          <text value="Button"/>
+          <text value="Skip"/>
         </properties>
       </component>
     </children>
