--- a/java/src/at/reisisoft/bibigui/ui/MainUI.form
+++ b/java/src/at/reisisoft/bibigui/ui/MainUI.form
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="at.reisisoft.bibigui.ui.MainUI">
-  <grid id="27dc6" binding="mainUIJPanel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="5" left="5" bottom="5" right="5"/>
+  <grid id="27dc6" binding="mainUIJPanel" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="189"/>
+      <xy x="20" y="20" width="679" height="216"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-3355444"/>
+    </properties>
     <border type="none" title="Bisect Control Panel" title-justification="2">
       <color color="-16777216"/>
     </border>
@@ -13,18 +14,21 @@
       <component id="abf03" class="javax.swing.JButton" binding="repoFolderOnDiskButton" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="0" left="3" bottom="3" right="3" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
+          <background color="-3355444"/>
           <text value="Repo folder on disk"/>
         </properties>
       </component>
       <component id="67936" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <gridbag top="3" left="3" bottom="3" right="3" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <labelFor value="7bf2"/>
-          <text value="Repo online"/>
+          <text value="Repo online: "/>
         </properties>
       </component>
       <component id="180b5" class="javax.swing.JTextArea" binding="textAreaOutput">
@@ -32,16 +36,19 @@
           <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
+          <gridbag top="3" left="3" bottom="3" right="3" weightx="0.0" weighty="1.0"/>
         </constraints>
         <properties>
+          <background color="-1710619"/>
           <editable value="true"/>
         </properties>
       </component>
-      <component id="c5b47" class="javax.swing.JTextField" binding="TBrepoFolderOnDisk">
+      <component id="c5b47" class="javax.swing.JTextField" binding="tbRepoFolderOnDisk">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
+          <gridbag top="0" left="3" bottom="3" right="3" weightx="0.7" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
@@ -50,34 +57,43 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
+          <gridbag top="3" left="3" bottom="3" right="3" weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
       <component id="b7c45" class="javax.swing.JButton" binding="startButton" default-binding="true">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="0" left="3" bottom="3" right="3" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
+          <background color="-3355444"/>
           <text value="Start"/>
         </properties>
       </component>
       <component id="5f5ef" class="javax.swing.JButton" binding="checkSetupButton" default-binding="true">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <gridbag top="3" left="3" bottom="3" right="3" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="CheckSetup"/>
+          <background color="-3355444"/>
+          <text value="Check Setup"/>
         </properties>
       </component>
       <component id="febdf" class="javax.swing.JProgressBar" binding="progressBar1" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="-1" height="50"/>
-            <preferred-size width="-1" height="50"/>
+            <minimum-size width="-1" height="20"/>
+            <preferred-size width="-1" height="20"/>
           </grid>
+          <gridbag top="3" left="3" bottom="3" right="3" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
+          <background color="-3355444"/>
+          <borderPainted value="true"/>
           <foreground awt-color="green"/>
+          <value value="50"/>
         </properties>
       </component>
       <component id="89758" class="javax.swing.JComboBox" binding="fromComboBox">
@@ -86,6 +102,7 @@
             <minimum-size width="250" height="-1"/>
             <preferred-size width="250" height="-1"/>
           </grid>
+          <gridbag top="0" left="3" bottom="3" right="3" weightx="0.3" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
@@ -95,6 +112,7 @@
             <minimum-size width="250" height="-1"/>
             <preferred-size width="250" height="-1"/>
           </grid>
+          <gridbag top="3" left="3" bottom="3" right="3" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
